; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_kmsg.c_ipc_kmsg_delayed_destroy.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_kmsg.c_ipc_kmsg_delayed_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ipc_kmsg_delayed_destroy(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = call %struct.TYPE_2__* (...) @current_thread()
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @ipc_kmsg_queue_empty(i32* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @ipc_kmsg_enqueue(i32* %9, i32 %10)
  %12 = load i32, i32* %4, align 4
  ret i32 %12
}

declare dso_local %struct.TYPE_2__* @current_thread(...) #1

declare dso_local i32 @ipc_kmsg_queue_empty(i32*) #1

declare dso_local i32 @ipc_kmsg_enqueue(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
